# Rust-AutoGPT

./: .gitignore
auto_gippity/: Cargo.toml  README.md
auto_gippity/src/: main.rs
auto_gippity/src/ai_functions/: aifunc_architect.rs
auto_gippity/src/apis/: call_request.rs
auto_gippity/src/helpers/: command_line.rs  general.rs
auto_gippity/src/models/: mod.rs
auto_gippity/src/models/agent_basic/: basic_agent.rs  basic_traits.rs
auto_gippity/src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs  mod.rs
auto_gippity/src/models/agents_manager/: managing_agent.rs
my_proc_macro/: Cargo.toml
my_proc_macro/src/: lib.rs
playaround/: Cargo.toml  increments.txt
playaround/src/: m10_proc_macros.rs  m12_concurrency.rs  m7_async.rs  m9_decl_macros.rs  main.rs
web_template/: Cargo.toml  database.json
web_template/src/: code_template.rs
